plot tweaks, change var to use %

--- a/helpers/impactPlots.ipynb
+++ b/helpers/impactPlots.ipynb
@@ -64,7 +64,9 @@
    "outputs": [],
    "source": [
     "def plotAnom(da, ax, showOcean=True):\n",
-    "    \"\"\"For a provided dataarray and axis:\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    For a provided dataarray and axis:\n",
     "    - plot the data\n",
     "    - add coastlines\n",
     "    - add a box for the area of interest\n",
@@ -211,16 +213,38 @@
    "outputs": [],
    "source": [
     "def singleAnomWithStipling(da, iComp, iSeason, iImpact='Rain',*args):\n",
+    "    \"\"\"\n",
     "    \n",
+    "    For a provided set of CMIP6 compounds, and the iComp name provided, plot the rainfall impact for the season specified.\n",
+    "    \n",
+    "    This relies on normal pr/ts being loaded.\n",
+    "    \n",
+    "    If iImpact is specified this can be used to choose 'Temp', default is 'Rain'\n",
+    "    \n",
+    "    args can be used to provide a different impact gridded dataset\n",
+    "    \n",
+    "    \n",
+    "    \"\"\"\n",
+    "    \n",
+    "    # which events are we plotting\n",
+    "    if type(iComp)==str:\n",
+    "        plotCond = da.sel(compound=iComp,drop=True)\n",
+    "    elif type(iComp)==list:\n",
+    "        plotCond = da.sel(compound=iComp,drop=True).any('compound')\n",
+    "    else:\n",
+    "        raise EnvironmentError('iComp not supported')\n",
+    "        \n",
+    "    #name of the impact dataset\n",
     "    season=iSeason.capitalize() +' '+ iImpact\n",
-    "    \n",
-    "    plotCond = da.sel(compound=iComp,drop=True)\n",
+    "    # which impact dataset\n",
     "    if len(args)==1:\n",
     "        toPlot=args[0][season].where(plotCond)\n",
     "    elif iImpact=='Rain':\n",
     "        toPlot = prXr[season].where(plotCond)\n",
     "    elif iImpact=='Temp':\n",
     "        toPlot = detrendTsXr[season].where(plotCond)\n",
+    "        \n",
+    "    #plot\n",
     "    cs, gl=plotAnom(toPlot.mean(['year','model']), ax)\n",
     "    plotStipling(toPlot.mean('year'),ax)\n",
     "\n",
@@ -255,7 +279,13 @@
     "    \n",
     "    season=iSeason.capitalize() +' '+ iImpact\n",
     "    \n",
-    "    plotCond = da.sel(compound=iComp,drop=True)\n",
+    "    if type(iComp)==str:\n",
+    "        plotCond = da.sel(compound=iComp,drop=True)\n",
+    "    elif type(iComp)==list:\n",
+    "        plotCond = da.sel(compound=iComp,drop=True).any('compound')\n",
+    "    else:\n",
+    "        raise EnvironmentError('iComp not supported')\n",
+    "        \n",
     "    if len(args)==1:\n",
     "        toPlot=args[0][season].where(plotCond)\n",
     "    elif iImpact=='Rain':\n",
