--- a/utils/emergence.ipynb
+++ b/utils/emergence.ipynb
@@ -128,7 +128,7 @@
    "source": [
     "def emergePlotWithModelCount(binnedXr, climatXr, yLabel='Events per 30 Years', xlim=[1900,2100]):\n",
     "    '''\n",
-    "    plot indeces for multi-experiment mean, and add some lines for CI\n",
+    "    plot indeces for multi-experiment mean, and Number of models which emerge in a seperate row\n",
     "\n",
     "    '''\n",
     "    #somewhere to save axes\n",
@@ -181,43 +181,43 @@
     "        plt.ylabel(yLabel)\n",
     "        plt.legend()\n",
     "        \n",
+    "        #next row for emergence\n",
     "        #create a subplot (row, column, size)\n",
     "        ax.append(fig.add_subplot(2*nIndices,1,2*i+2))\n",
     "        \n",
+    "        # years it emerged\n",
     "        emergeNd=emergeXr[indexToPlot[i]].sel(year=slice(1865,2084),drop=True).values\n",
-    "        \n",
+    "        # which years does it emerge in\n",
     "        posEmergeNd=numpy.greater(\n",
     "            emergeNd[:,1:-1],\n",
     "            emergeNd[:,0:-2]\n",
     "        )\n",
+    "        # which years does it unemerge again\n",
     "        negEmergeNd=numpy.less(\n",
     "            emergeNd[:,1:-1],\n",
     "            emergeNd[:,0:-2]\n",
     "        )\n",
-    "        #print((posEmergeNd))\n",
-    "        #print((negEmergeNd))\n",
+    "        \n",
+    "        #somewhere to park the results\n",
     "        modelCount=numpy.ndarray(220)\n",
     "        modelCount[0]=0\n",
-    "        for iYear in range(1,220):\n",
+    "        \n",
+    "        for iYear in range(1,220): #(year 0 is 1865, does through to 2085\n",
+    "            #the number of models which have emerge this year\n",
     "            modelCount[iYear]=(\n",
     "                numpy.count_nonzero(\n",
-    "                    (numpy.all(posEmergeNd[\n",
-    "                        :,\n",
-    "                        iYear:]==False,\n",
-    "                               1\n",
-    "                              ))\n",
+    "                    numpy.all(posEmergeNd[:,iYear:]==False,1) #all future years don't emerge\n",
     "                    &numpy.not_equal(\n",
-    "                        numpy.count_nonzero(posEmergeNd,1\n",
-    "                                           ),\n",
-    "                        numpy.count_nonzero(negEmergeNd,1\n",
-    "                                           )-emergeNd[:,\n",
-    "                            0]\n",
+    "                        numpy.count_nonzero(posEmergeNd,1), #the number of emerge years\n",
+    "                        numpy.count_nonzero(negEmergeNd,1) #equals the number of unemerge years\n",
+    "                        -emergeNd[:,0] #if the first year is the emerge years, then take one off\n",
     "                    )\n",
     "                 )\n",
     "            )\n",
     "            \n",
     "        print(modelCount[-1])\n",
     "        \n",
+    "        #brown vertical lines\n",
     "        plt.fill_between(\n",
     "            range(0,220),\n",
     "            0,\n",
@@ -226,15 +226,15 @@
     "            alpha=0.5\n",
     "        )\n",
     "        \n",
+    "        #70% criteria\n",
     "        plt.hlines(70,0,2100, color='grey', linestyle='dashed')\n",
     "        \n",
+    "        #tidy\n",
     "        plt.xticks(ticks=[35,60,85,110,135,160,185,210], labels=range(1900,2100,25))\n",
     "        plt.yticks([0,35,70,100])\n",
     "        plt.ylim([0,105])\n",
     "        plt.xlim((xlim[0]-1865,xlim[1]-1865))\n",
     "        plt.ylabel('Emerge (%)')\n",
-    "\n",
-    "        \n",
     "\n",
     "    return ax"
    ]
