--- a/utils/emergence.ipynb
+++ b/utils/emergence.ipynb
@@ -152,6 +152,7 @@
     "\n",
     "    #emergence\n",
     "    emergeXr=binnedXr>(meanXr+Z*stdXr)\n",
+    "    #emergeXr=binnedXr<(meanXr-Z*stdXr)\n",
     "    \n",
     "    # define somewhere to plot\n",
     "    fig = plt.figure(figsize=(12,4*nIndices))\n",
