--- a/utils/emergence.ipynb
+++ b/utils/emergence.ipynb
@@ -37,24 +37,6 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "9d2cb327-4eb0-4cb6-a9c6-3d3318b806ad",
-   "metadata": {},
-   "source": [
-    "# A function to trim to the area of interest for this study\n",
-    "def domain(ds):\n",
-    "    return ds.where(\n",
-    "    (ds.lat<=-28)\n",
-    "    *(ds.lat>=-39)\n",
-    "    *(ds.lon>=144)\n",
-    "    *(ds.lon<=155),\n",
-    "    drop=True\n",
-    ")\n",
-    "    \n",
-    "    "
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 7,
    "id": "b480e00c-dbeb-44c5-8e52-0c5a3b3bc2e3",
@@ -63,8 +45,7 @@
    "source": [
     "def emergePlot(binnedXr, yLabel='Events per 30 Years', xlim=[1900,2100]):\n",
     "    '''\n",
-    "    plot indeces for multi-experiment mean, and add some lines for CI\n",
-    "\n",
+    "    plot indeces for multi-experiment mean, \n",
     "    '''\n",
     "    #somewhere to save axes\n",
     "    ax=list()\n",
@@ -151,8 +132,8 @@
     "    nIndices=len(indexToPlot)\n",
     "\n",
     "    #emergence\n",
-    "    emergeXr=binnedXr>(meanXr+Z*stdXr)\n",
-    "    #emergeXr=binnedXr<(meanXr-Z*stdXr)\n",
+    "    #emergeXr=binnedXr>(meanXr+Z*stdXr)\n",
+    "    emergeXr=binnedXr<(meanXr-Z*stdXr)\n",
     "    \n",
     "    # define somewhere to plot\n",
     "    fig = plt.figure(figsize=(12,4*nIndices))\n",
