--- a/utils/emergence.ipynb
+++ b/utils/emergence.ipynb
@@ -331,7 +331,7 @@
     "    #fig.add_subplot(1,1,1)\n",
     "\n",
     "    \n",
-    "    mainColor=['red','blue','green','orange','purple']\n",
+    "    mainColor=['blue','red','green','orange','purple']\n",
     "    \n",
     "    # for each variable number\n",
     "    for i in range(nIndices):\n",
@@ -372,8 +372,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "5e2eba32-9915-41e1-a1e6-9c6e484a0ab7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.29000000000000004"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(1-3.5*0.12)/2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e7bcd253-b3cc-4bea-9448-2050fe0e6498",
    "metadata": {},
    "outputs": [],
    "source": []
