A few descriptions and readme updates

--- a/cmipIndeces.ipynb
+++ b/cmipIndeces.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "This file \n",
     "1. calculates all the 'traditional' indeces defined in utils/_indexDefinitions for all months for all models.\n",
-    "2. it then averages the result over the warm season\n",
+    "2. it then averages the result over the cool season / warm season\n",
     "3. and figures out what years there are compounding events\n",
     "\n"
    ]
@@ -95,7 +95,8 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "#The heavy lifting - you need the output from this to proceed\n",
+    "# The heavy lifting - you need the output from this to proceed\n",
+    "# Probably makes more sense to run this on the command line direct or similar.\n",
     "\n",
     "%run ./cmipIndeces.py"
    ]
@@ -2570,7 +2571,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
