--- a/helpers/impactPlots.ipynb
+++ b/helpers/impactPlots.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "248e9316-6a96-46bf-bac2-12928fe4058c",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "508358c6-98f0-4f01-b902-205a61a5e3d8",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "3385a297-ed64-40fe-aa75-426b7089c514",
    "metadata": {
     "tags": []
@@ -93,10 +93,10 @@
     "        precContours=numpy.arange(-1.6,1.61,0.2)\n",
     "        cmap='BrBG'\n",
     "    elif tsMatcher.search(da.name):\n",
-    "        #precContours=numpy.arange(0,5.5,0.5)\n",
-    "        #cmap='Reds'\n",
-    "        precContours=numpy.arange(-2,2,0.25)\n",
-    "        cmap='coolwarm'\n",
+    "        precContours=numpy.arange(0,5.5,0.5)\n",
+    "        cmap='Reds'\n",
+    "        #precContours=numpy.arange(-2,2,0.25)\n",
+    "        #cmap='coolwarm'\n",
     "    else:\n",
     "        precContours=numpy.linspace(da.min(), da.max(), 7)\n",
     "        cmap='viridis'\n",
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "03ce2e5a-cd64-4f51-b03e-3be38e33f240",
    "metadata": {
     "tags": []
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "23974906-5904-4b2e-9165-b52cc3800cdb",
    "metadata": {},
    "outputs": [],
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "3216b2f5-49ef-4e6a-997c-0c0d400bfc0f",
    "metadata": {},
    "outputs": [],
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "9bdb0f30-8d97-4129-9a5e-343609e2bcd3",
    "metadata": {
     "tags": []
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "002bf925-5936-4643-8a8b-73afcae831a4",
    "metadata": {},
    "outputs": [],
@@ -532,7 +532,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
