--- a/utils/emergence.ipynb
+++ b/utils/emergence.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "26fc3871-8eb7-4ca6-80c3-3c7302198dcc",
    "metadata": {},
    "outputs": [],
    "source": [
     "def domain(ds):\n",
     "    \n",
-    "    \"\"\"Returns the area of a lat/lon xarrray which us over land and within the bounds for this research\"\"\"\n",
+    "    \"\"\"Returns the area of a lat/lon xarrray which is over land and within the bounds for this research\"\"\"\n",
     "    \n",
     "    # this is the mask of land area\n",
     "    landMask=xarray.open_dataset(\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "b480e00c-dbeb-44c5-8e52-0c5a3b3bc2e3",
    "metadata": {},
    "outputs": [],
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "0a078395-e752-4e47-9390-c6ab1477cfb3",
    "metadata": {},
    "outputs": [],
@@ -131,9 +131,10 @@
     "    indexToPlot = list(binnedXr.where(binnedXr.isnull().all()==False).data_vars)\n",
     "    nIndices=len(indexToPlot)\n",
     "\n",
-    "    #emergence\n",
-    "    #emergeXr=binnedXr>(meanXr+Z*stdXr)\n",
-    "    emergeXr=binnedXr<(meanXr-Z*stdXr)\n",
+    "    #emergence \n",
+    "    #TODO: implement a future for higher levels and lower levels of emergence\n",
+    "    emergeXr=binnedXr>(meanXr+Z*stdXr)\n",
+    "    #emergeXr=binnedXr<(meanXr-Z*stdXr)\n",
     "    \n",
     "    # define somewhere to plot\n",
     "    fig = plt.figure(figsize=(12,4*nIndices))\n",
@@ -223,13 +224,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "434e5cab-6286-4698-ad2c-9c52ab8221d4",
    "metadata": {},
    "outputs": [],
    "source": [
     "def modelEmergePlot(binnedXr, climatXr, yLabel='Events per 30 Years', xlim=[1900,2100]):\n",
     "\n",
+    "    '''\n",
+    "    plot indeces for one model, and some 95% CI lines (calculated from climatXr), \n",
+    "    '''\n",
+    "    \n",
     "    ax=list()\n",
     "    # plot indeces for multi-experiment mean, and add some lines for CI\n",
     "    \n",
@@ -292,14 +297,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "c3a2531b-5a2d-4b9d-8c9d-6f35d87e9aba",
    "metadata": {},
    "outputs": [],
    "source": [
     "def overlaidEmergePlot(binnedXr, *args):\n",
     "\n",
-    "    # plot indeces for multi-experiment mean, and add some lines for CI\n",
+    "    ''' plot indeces for multi-experiment mean, but overlaid on one plot, instead of multiple lines'''\n",
     "    \n",
     "   \n",
     "    \n",
@@ -372,27 +377,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "5e2eba32-9915-41e1-a1e6-9c6e484a0ab7",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.29000000000000004"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "(1-3.5*0.12)/2"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "id": "e7bcd253-b3cc-4bea-9448-2050fe0e6498",
    "metadata": {},
@@ -416,7 +400,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
